--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aomi/react-router",
-  "version": "0.0.1-Alpha",
+  "version": "0.0.1-Alpha.1",
   "main": "index.js",
   "repository": "git@github.com:aomi-web/react-router.git",
   "author": "尼古拉斯丶少 <sean.snow@live.com>",
